[project]
name = "crypto-research"
version = "0.1.0"
description = "Agent framework to research crypto"
authors = [
    {name = "seshadri nithin"}
]
license = {text = "none"}
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "openai (>=1.59.9,<2.0.0)",
    "langchain (>=0.3.14,<0.4.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.14.1"

